# iocingestor

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  config.example.yml  pyproject.toml  rss.example.yml
.github/workflows/: test.yml
iocingestor/: __init__.py  artifacts.py  config.py  exceptions.py  schemas.py  state.py
iocingestor/artifacts/: __init__.py  artifact.py  domain.py  hash.py  ip_address.py  task.py  url.py
iocingestor/extras/: api.py  webapp.py
iocingestor/extras/public/: index.html  list.html
iocingestor/ioc_fanger/: __init__.py  fang.json  grammars.py  ioc_fanger.py
iocingestor/operators/: __init__.py  abstract_json.py  csv.py  misp.py  sqlite.py
iocingestor/sources/: __init__.py  abstract_json.py  github.py  rss.py  twitter.py  web.py
iocingestor/whitelists/: __init__.py
tests/: conftest.py  test_artifacts.py  test_ingestor.py  test_operators.py  test_operators_abstract_json.py  test_operators_misp.py  test_operators_sqlite.py  test_sources.py  test_sources_github.py  test_sources_json.py  test_sources_rss.py  test_sources_twitter.py  test_sources_web.py  test_state.py  test_version.py  test_whitelist.py
tests/extras/: test_api.py
