[tool.poetry]
name = "iocingestor"
version = "0.3.2"
description = "Extract and aggregate IOCs from threat feeds."
authors = ["Manabu Niseki <manabu.niseki@gmail.com>", "InQuest Labs <labs@inquest.net>"]
homepage = "https://github.com/ninoseki/iocingestor"
repository = "https://github.com/ninoseki/iocingestor"
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
aiocontextvars = "^0.2.2"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
beautifulsoup4 = "^4.9.3"
contextvars = "^2.4"
environs = "^9.3.1"
fastapi = "^0.68.0"
fastapi-utils = "^0.2.1"
feedparser = "^6.0.2"
importlib-metadata = "^4.0.0"
ioc-finder = "^5.0.1"
iocextract = "^1.13.1"
ipaddress = "^1.0.23"
jsonpath-rw = "^1.4.0"
loguru = "^0.5.3"
poetry-version = "^0.1.5"
pydantic = "^1.8"
pymisp = "^2.4.131"
pyparsing = "^2.4.7"
PyYAML = "^5.4.1"
requests = "^2.25.1"
sgmllib3k = "^1.0.0"
statsd = "^3.3.0"
twitter = "^1.18.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.5"
black = "^20.8b1"
coverage = "^5.4"
coveralls = "^3.0.0"
flake8 = "^3.8.4"
httpretty = "^1.0.5"
isort = "^5.7.0"
mock = "^4.0.3"
mypy = "^0.812"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-env = "^0.6.2"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.10.0"
responses = "^0.13.0"

[tool.poetry.scripts]
iocingestor = "iocingestor:main"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["bs4", "feedparser", "httpretty", "hug", "ioc_finder", "iocextract", "jsonpath_rw", "loguru", "pydantic", "pymisp", "pyparsing", "requests", "responses", "statsd", "twitter", "yaml"]
line_length = 88
multi_line_output = 3
use_parentheses= true

[tool.pytest.ini_options]
minversion = "6.0"
env = ["IOCINGESTOR_SQLITE3_DATABASE=:memory:"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
